# nettle

./: .bootstrap  .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.am.in  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  aead-decrypt-msg.c  aead-decrypt.c  aead-encrypt-msg.c  aead-encrypt.c  aead.h  aes-decrypt-internal.c  aes-decrypt-table.c  aes-decrypt.c  aes-encrypt-internal.c  aes-encrypt-table.c  aes-encrypt.c  aes-internal.h  aes-invert-internal.c  aes-meta.c  aes-set-decrypt-key.c  aes-set-encrypt-key.c  aes-set-key-internal.c  aes-set-key.c  aes-tables.c  aes.c  aes.c-hacked  aes.h  aes128-decrypt.c  aes128-encrypt.c  aes128-meta.c  (+517 more)
arm/: README  aes-decrypt-internal.asm  aes-encrypt-internal.asm  aes.m4  ecc-192-modp.asm  ecc-224-modp.asm  ecc-256-redc.asm  ecc-384-modp.asm  ecc-521-modp.asm  ecc-secp192r1-modp.asm  ecc-secp224r1-modp.asm  ecc-secp256r1-redc.asm  ecc-secp384r1-modp.asm  ecc-secp521r1-modp.asm  memxor.asm
arm/fat/: chacha-3core.asm  chacha-core-internal-2.asm  salsa20-2core.asm  salsa20-core-internal-2.asm  sha1-compress-2.asm
arm/neon/: chacha-3core.asm  chacha-core-internal.asm  salsa20-2core.asm  salsa20-core-internal.asm
arm/v6/: aes-decrypt-internal.asm  aes-encrypt-internal.asm  sha1-compress.asm  sha256-compress.asm
arm64/: README  ecc-secp256r1-redc.asm  machine.m4
arm64/asimd/: chacha-2core.asm  chacha-4core.asm  chacha-core-internal.asm  poly1305-2core.asm
arm64/crypto/: aes128-decrypt.asm  aes128-encrypt.asm  aes192-decrypt.asm  aes192-encrypt.asm  aes256-decrypt.asm  aes256-encrypt.asm  gcm-hash.asm
arm64/fat/: chacha-2core.asm  chacha-4core.asm  chacha-core-internal-2.asm  gcm-hash.asm  poly1305-2core.asm
arm64/v8/: gcm-hash.asm
armv7/: README  aes-decrypt-internal.asm  aes-encrypt-internal.asm  ecc-384-modp.asm  machine.m4  memxor.asm  sha3-permute.asm  sha512-compress.asm  umac-nh.asm
examples/: .cvsignore  .gitignore  Makefile.am  Makefile.in  base16dec.c  base16enc.c  base64dec.c  base64enc.c  ecc-benchmark.c  eratosthenes.c  hogweed-benchmark.c  io.c  io.h  lfib-stream.c  nettle-benchmark.c  nettle-openssl.c  next-prime.c  random-prime.c  read_rsa_key.c  rsa-decrypt.c  rsa-encrypt-test  rsa-encrypt.c  rsa-keygen.c  rsa-session.h  rsa-sign.c  rsa-verify-test  rsa-verify.c  run-tests  setup-env  sexp-conv-test  sexp-conv.c  teardown-env  timing.h
include/: .cvsignore  .gitignore  Makefile.am.in  RCSID.h  arcfour.h  blowfish.h  cast.h  crypto_types.h  des.h  idea.h  md5.h  rc4.h  rijndael.h  serpent.h  sha.h  twofish.h  types.h
misc/: .gitignore  Makefile  ecc-formulas.tex  ecc-ref.gp  plan.html  serpent-sbox6i.dot  xenofarm.sh
misc/umac/: mkvectors  umac.py  vectors.out
powerpc64/: README  ecc-curve25519-modp.asm  ecc-secp256r1-redc.asm  machine.m4
powerpc64/fat/: aes-decrypt-internal-2.asm  aes-encrypt-internal-2.asm  ghash-update-2.asm  poly1305-blocks.asm  sha512-compress-2.asm
powerpc64/p7/: chacha-2core.asm  chacha-4core.asm  chacha-core-internal.asm
powerpc64/p8/: aes-decrypt-internal.asm  aes-encrypt-internal.asm  gcm-aes-decrypt.asm  gcm-aes-encrypt.asm  gcm-hash.asm  ghash-set-key.asm  ghash-update.asm  sha256-compress-n.asm  sha512-compress.asm
powerpc64/p9/: poly1305-blocks.asm  poly1305-internal.asm  poly1305.m4
s390x/: machine.m4  memxor.asm
s390x/fat/: gcm-hash.asm
s390x/msa_x4/: gcm-hash.asm
s390x/vf/: chacha-4core.asm  memxor3.asm  sha3-permute.asm
sparc/: aes-decrypt-internal.asm  aes-encrypt-internal.asm  aes.asm  arcfour-crypt.asm  machine.m4
sparc32/: aes-decrypt-internal.asm  aes-encrypt-internal.asm  arcfour-crypt.asm
sparc64/: aes-decrypt-internal.asm  aes-encrypt-internal.asm  aes.asm  arcfour-crypt.asm  machine.m4
testsuite/: .cvsignore  .gitignore  .test-rules.make  Makefile.am  Makefile.in  aes-test.c  aes-test.m4  arcfour-test.c  arcfour-test.m4  arctwo-test.c  balloon-test.c  base16-test.c  base64-test.c  bignum-test.c  bignum-test.m4  blake2b-test.c  blake2s-test.c  blowfish-test.c  blowfish-test.m4  camellia-test.c  cast128-test.c  cast128-test.m4  cbc-test.c  cbc-test.m4  ccm-test.c  cfb-test.c  chacha-poly1305-test.c  chacha-test.c  cmac-test.c  ctr-test.c  curve25519-add-test.c  curve25519-dh-test.c  curve25519-dup-test.c  cxx-test.cxx  des-compat-test.c  des-test.c  des-test.m4  des3-test.c  des3-test.m4  dlopen-test.c  (+93 more)
tools/: .cvsignore  .gitignore  Makefile.am  Makefile.in  input.c  input.h  misc.c  misc.h  nettle-hash.c  nettle-lfib-stream.c  nettle-pbkdf2-test  nettle-pbkdf2.c  output.c  output.h  parse.c  parse.h  pkcs1-conv-test  pkcs1-conv.c  sexp-conv-test  sexp-conv.c
x86/: aes-decrypt-internal.asm  aes-decrypt.asm  aes-encrypt-internal.asm  aes-encrypt.asm  aes.asm  aes.m4  aes_tables.asm  arcfour-crypt.asm  camellia-crypt-internal.asm  machine.m4  md5-compress.asm  sha1-compress.asm  sha1-f2.nlms
x86_64/: README  aes-decrypt-internal.asm  aes-encrypt-internal.asm  aes.m4  camellia-crypt-internal.asm  chacha-core-internal.asm  ecc-192-modp.asm  ecc-224-modp.asm  ecc-25519-modp.asm  ecc-256-redc.asm  ecc-521-modp.asm  ecc-curve25519-modp.asm  ecc-curve448-modp.asm  ecc-secp192r1-modp.asm  ecc-secp224r1-modp.asm  ecc-secp256r1-redc.asm  ecc-secp384r1-modp.asm  ecc-secp521r1-modp.asm  gcm-gf-mul-8.asm  gcm-hash8.asm  ghash-update.asm  machine.m4  md5-compress.asm  memxor.asm  poly1305-internal.asm  salsa20-2core.asm  salsa20-core-internal.asm  salsa20-crypt.asm  serpent-decrypt.asm  serpent-encrypt.asm  sha1-compress.asm  sha256-compress-n.asm  sha256-compress.asm  sha3-permute.asm  sha512-compress.asm  skein256-internal.asm  umac-nh-n.asm  umac-nh.asm
x86_64/aesni/: aes-decrypt-internal.asm  aes-encrypt-internal.asm  aes256-decrypt.asm  aes256-encrypt.asm  cbc-aes128-encrypt.asm  cbc-aes192-encrypt.asm  cbc-aes256-encrypt.asm
x86_64/aesni_pclmul/: gcm-aes-encrypt.asm
x86_64/fat/: aes-decrypt-internal-2.asm  aes-decrypt-internal.asm  aes-encrypt-internal-2.asm  aes-encrypt-internal.asm  fat.c  gcm-hash.asm  memxor-2.asm  memxor.asm  sha1-compress-2.asm  sha1-compress.asm
(+4 files in other folders)
