dnl Process this file with autoconf to produce a configure script.

# $Id$
AC_INIT(sha.c)

AC_PROG_MAKE_SET

AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP

AC_OUTPUT(Makefile)
